# video-clipper

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  app.py  pyproject.toml  requirements.txt  setup.py
tests/: .gitignore  constants.py  test_extract_progress.py
video_clipper/: __main__.py  clipper.py  constants.py  ffmpeg_wrapper.py  init_manifest.py
video_clipper/templates/: manifest.template.yaml
